# agent-mobility

./: README.md  docs.md  pyproject.toml  test.db  test.py
agent_mobility/: README.md  __init__.py
agent_mobility/agent_entities/: search_tools.py
agent_mobility/database/: __init__.py  manager.py
agent_mobility/models/: __init__.py  entities.py  enums.py
agent_mobility/navigation/: __init__.py  navigation.py
agent_mobility/services/: __init__.py  entity.py  navigation.py
logs/: test_sim_20251027_014931.csv  test_sim_20251027_015038.csv  urban_simulation_50_20251028_020135.csv  urban_simulation_50_20251028_020135.json
socialsim/: __init__.py
socialsim/agents/: __init__.py  base.py
socialsim/agents/behaviors/: __init__.py  needs.py
socialsim/core/: __init__.py  simulation.py  types.py
socialsim/environment/: __init__.py  simple.py
socialsim/llm/: __init__.py  providers.py
socialsim/tools/: __init__.py  metrics.py
tests/: .env.example  basic_simulation.py  complete_phase1_tests.py  test_agents.py  test_basic_agents.py  test_llm_provider.py  test_types.py
